[tool.poetry]
name = "sludge"
version = "0.1.0"
description = ""
authors = ["asaunde78 <saundersasher78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
vosk = "^0.3.45"
yt-dlp = "^2024.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
